--- a/kubernetes/k8s/ds.yaml
+++ b/kubernetes/k8s/ds.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
-kind: ReplicaSet
+kind: DaemonSet
 metadata:
-  name: nginx-rs
+  name: nginx-ds
   labels:
     env: demo
 spec:
@@ -10,11 +10,12 @@ spec:
       labels:
         env: demo
       name: nginx
-      spec:
-        containers:
-          - image: nginx
-            name: nginx
-  replicas: 3
+    spec:
+      containers:
+        - image: nginx
+          name: nginx
+          ports:
+            - containerPort: 80
   selector:
     matchLabels:
       env: demo
